--- a/cotizador.html
+++ b/cotizador.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="static/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   
-  <script defer src="static/js/cars.js"></script>
+  <!-- <script defer src="static/js/cars.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script defer src="static/js/app.js"></script>
 </head>
 <body>
