--- a/cotizador.html
+++ b/cotizador.html
@@ -10,13 +10,10 @@
   <link rel="stylesheet" href="static/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   
-  <!-- <script defer src="static/js/cars.js"></script> -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script defer src="static/js/app.js"></script>
 </head>
 <body>
   <div class="page-content">
-    <div class="container w-50">
+    <div class="container w-50" id="formContainer">
       <div class="row">
         <div class="col">
           <h1>Cotizador</h1>
@@ -71,9 +68,8 @@
               </div>
               <div class="col">
                 <div class="form-group">
-                  <!-- <label for="inputGNCPrice">Valor equipo GNC</label> -->
                   <legend class="col-form-label">Valor del equipo</legend>
-                  <input type="text" class="form-control" id="gncPriceInput" disabled>
+                  <input type="number" min="0" class="form-control" id="gncPriceInput" disabled>
                 </div>
               </div>
             </div>
@@ -87,5 +83,33 @@
       </form>
     </div>
   </div>
+  <div class="container w-75" id="result">
+    <div class="row">
+      <div class="col">
+        <div class="card-container">
+          <h1>Data</h1>
+          <div class="card-body" id="carData">
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card-container border">
+          <h1>basico</h1>
+          <div class="card-body" id="basicPlanCard">
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card-container border">
+          <h1>todo riesgo</h1>
+          <div class="card-body" id="fullPlanCard">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script defer src="static/js/app.js"></script>
 </body>
 </html>
