bugfix: solucionado no mostraba resultados

--- a/cotizador.html
+++ b/cotizador.html
@@ -83,7 +83,7 @@
       </form>
     </div>
   </div>
-  <div class="container w-75" id="result">
+  <div class="container w-75" id="result" hidden>
     <div class="row">
       <div class="col">
         <div class="card-container">
