feat: agregado de animaciones

--- a/cotizador.html
+++ b/cotizador.html
@@ -83,13 +83,12 @@
       </form>
     </div>
   </div>
-  <div class="container w-75" id="result" hidden>
+  <div class="container w-75" id="result">
     <div class="row">
       <div class="col">
         <div class="card-container">
           <h1>Data</h1>
           <div class="card-body" id="carData">
-
           </div>
         </div>
       </div>
@@ -106,6 +105,11 @@
           <div class="card-body" id="fullPlanCard">
           </div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col align-rigth">
+        <button type="button" id="btnBack" class="btn m-3 btn-outline-dark float-right">Nueva Cotización</button>
       </div>
     </div>
   </div>
