feat: cambio de estilos

--- a/cotizador.html
+++ b/cotizador.html
@@ -77,39 +77,39 @@
         </div>
         <div class="row">
           <div class="col align-rigth">
-            <button type="button" id="btnQuote" class="btn m-3 btn-outline-dark float-right">Cotizar</button>
+            <button type="button" id="btnQuote" class="btn m-3 btn-outline-light float-right">Cotizar</button>
           </div>
         </div>
       </form>
     </div>
-  </div>
-  <div class="container w-75" id="result">
-    <div class="row">
-      <div class="col">
-        <div class="card-container">
-          <h1>Data</h1>
-          <div class="card-body" id="carData">
+    <div class="container w-75" id="result">
+      <div class="row">
+        <div class="col">
+          <div class="card-container">
+            <h1>Data</h1>
+            <div class="card-body" id="carData">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container">
+            <h1>basico</h1>
+            <div class="card-body" id="basicPlanCard">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-container">
+            <h1>todo riesgo</h1>
+            <div class="card-body" id="fullPlanCard">
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card-container border">
-          <h1>basico</h1>
-          <div class="card-body" id="basicPlanCard">
-          </div>
+      <div class="row">
+        <div class="col align-rigth">
+          <button type="button" id="btnBack" class="btn m-3 btn-outline-light float-right">Nueva Cotización</button>
         </div>
-      </div>
-      <div class="col">
-        <div class="card-container border">
-          <h1>todo riesgo</h1>
-          <div class="card-body" id="fullPlanCard">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col align-rigth">
-        <button type="button" id="btnBack" class="btn m-3 btn-outline-dark float-right">Nueva Cotización</button>
       </div>
     </div>
   </div>
